--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@elysiajs/eden": "^1.4.5",
     "@tanstack/react-query": "^5.90.12",
+    "@upstash/realtime": "^1.0.0",
     "@upstash/redis": "^1.35.7",
     "date-fns": "^4.1.0",
     "elysia": "^1.4.18",
